--- a/public/styles.css
+++ b/public/styles.css
@@ -481,7 +481,7 @@ body {
 
 #canvas {
   position: absolute;
-  background-color: white;
+  background-color: rgb(237, 24, 24);
   image-rendering: pixelated;
 }
 
@@ -516,7 +516,7 @@ body {
 
 #mercy {
   position: absolute;
-  width: 5px;
+  width: 15px;
   height: max(10%, 130px);
   bottom: 100;
   display: flex;
