--- a/public/styles.css
+++ b/public/styles.css
@@ -516,7 +516,7 @@ body {
 
 #mercy {
   position: absolute;
-  width: 50px;
+  width: 10%;
   height: max(10%, 130px);
   bottom: 100;
   display: flex;
