--- a/public/styles.css
+++ b/public/styles.css
@@ -514,12 +514,72 @@ body {
   transform: scale(1.1);
 }
 
-#minimap {
+#mlpminimap {
+  display: block;
+  color: white;
+  width: 400px;
+  height: 300px;
   position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  top: 0%;
+  right: 0%;
+  background-color: rgba(0, 0, 0, .75);
+  border: 1px solid black;
+  overflow: hidden;
+}
+
+.map {
+  position: absolute;
+  margin: 0;
+  max-width: unset;
+  display: block;
+  image-rendering: pixelated;
   pointer-events: none;
+}
+
+.crosshair {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  border: 2px solid red;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+#resizer {
+  position: absolute;
+  bottom: 0%;
+  left: 0%;
+  width: 0px;
+  height: 0px;
+  border-bottom: 10px solid red;
+  border-left: 10px solid red;
+  border-top: 10px solid transparent;
+  border-right: 10px solid transparent;
+}
+
+.settings {
+  position: absolute;
+  background-color: rgba(0, 0, 0, .75);
+}
+
+.settings>div {
+  display: none;
+}
+
+.settings>.alwaysshow {
+  display: block;
+}
+
+:hover .settings>div {
+  display: block;
+}
+
+.settings .clickable {
+  cursor: pointer;
+  user-select: none;
+}
+
+#noSleep {
+  display: none;
 }
 
 #mercy {
@@ -590,10 +650,6 @@ body {
 }
 
 #share,
-#settings {
-  width: 50px;
-  height: 50px;
-}
 
 #picker {
   position: absolute;
