--- a/public/styles.css
+++ b/public/styles.css
@@ -550,6 +550,16 @@ body {
   pointer-events: all;
 }
 
+.field {
+  box-shadow: 10px 10px #111111C0;
+  border: 3px solid #111111;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  pointer-events: all;
+}
+
 @media (hover: hover) {
   .button:hover {
     cursor: pointer;
