--- a/public/styles.css
+++ b/public/styles.css
@@ -540,6 +540,17 @@ body {
   pointer-events: none;
 }
 
+#stats {
+  position: absolute;
+  width: 100%;
+  height: max(10%, 130px);
+  bottom: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
+}
+
 .button {
   box-shadow: 10px 10px #111111C0;
   border: 3px solid #111111;
