--- a/public/ui/styles.css
+++ b/public/ui/styles.css
@@ -564,9 +564,8 @@ body {
 
 #stats {
   position: absolute;
-  width: 100%;
-  height: max(10%, 130px);
-  bottom: 100;
+  top: 15px;
+  left: 15px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -587,11 +586,20 @@ body {
   box-shadow: 10px 10px #111111C0;
   border: 3px solid #111111;
   display: flex;
-  flex-direction: column;
+  right: 30px;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   pointer-events: all;
 }
+
+#usercount img,
+#usercount .info {
+  display: inline-block;
+  vertical-align: middle; /* Align the image and text vertically in the middle */
+  margin-right: 10px;
+}
+
 
 @media (hover: hover) {
   .button:hover {
